# fighter_pilot

./: CMakeLists.txt  CMakePresets.json  README.md  README.md_
assets/aircraft/f-15c/: flight_model.asset
assets/fx/: smoke_decay.asset
assets/shaders/: aircraft_lit.fs  aircraft_lit.vs  terrain_lit.fs  terrain_lit.vs
docs/: architecture.md
src/: main.cpp
src/aircraft/: Aircraft.cpp  Aircraft.hpp  F15C.cpp  F15C.hpp
src/app/: FlightLabApp.cpp  FlightLabApp.hpp
src/assets/: AircraftParametersAsset.cpp  AircraftParametersAsset.hpp
src/core/: AssetPaths.hpp  Math.hpp  Transforms.hpp
src/fx/: FxEntity.cpp  FxEntity.hpp  SmokeProfileAsset.cpp  SmokeProfileAsset.hpp  SmokeTrail.cpp  SmokeTrail.hpp
src/physics/: FlightPhysics.cpp  FlightPhysics.hpp
src/render/: CameraController.cpp  CameraController.hpp  HudRenderer.cpp  HudRenderer.hpp  ObjModelRenderer.cpp  ObjModelRenderer.hpp  RaylibContext.cpp  RaylibContext.hpp
src/world/: terrain.cpp  terrain.hpp
tests/: FlightModelAeroRegression.cpp  FlightModelSmoke.cpp
